--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.0"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
-        applicationId "com.csab.soundboard"
+        applicationId "net.firekesti.soundboard"
         minSdkVersion 14
         targetSdkVersion 23
         versionCode 1
@@ -27,5 +27,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile "com.android.support:appcompat-v7:23.0.0"
+    compile "com.android.support:appcompat-v7:23.1.0"
+    compile 'com.android.support:cardview-v7:23.1.0'
+    compile 'com.android.support:recyclerview-v7:23.1.0'
 }
